--- a/package.json
+++ b/package.json
@@ -1,21 +1,29 @@
 {
-  "devDependencies": {
-    "babel-preset-es2015": "^6.14.0",
-    "babelify": "^7.3.0",
-    "browserify": "^13.1.0",
-    "couleurs": "^6.0.3",
-    "gulp": "^3.9.1",
-    "gulp-clean-css": "~2.0.12",
-    "gulp-concat": "^2.6.0",
-    "gulp-filesize": "~0.0.6",
-    "gulp-htmlmin": "^2.0.0",
-    "gulp-pug": "^3.0.4",
-    "gulp-rename": "^1.2.2",
-    "gulp-stylus": "~2.5.0",
-    "gulp-uglify": "~2.0.0",
-    "gulp-watch": "^4.3.9",
-    "jquery": "^3.1.0",
-    "vinyl-buffer": "^1.0.0",
-    "vinyl-source-stream": "^1.1.0"
-  }
+	"name": "ZeroNetBoiler",
+	"version": "1.0.0",
+	"description": "Just a nice base to build your own ZeroNet site",
+	"license": "MIT",
+	"repository" :
+	{ "type" : "git",
+	  "url" : "https://github.com/AshotN/ZeroNet-Boiler"
+	},
+	"devDependencies": {
+		"babel-preset-es2015": "^6.18.0",
+		"babelify": "^7.3.0",
+		"browserify": "^13.1.1",
+		"couleurs": "^6.0.5",
+		"gulp": "^3.9.1",
+		"gulp-clean-css": "~2.0.13",
+		"gulp-concat": "^2.6.0",
+		"gulp-filesize": "~0.0.6",
+		"gulp-htmlmin": "^3.0.0",
+		"gulp-pug": "^3.1.0",
+		"gulp-rename": "^1.2.2",
+		"gulp-stylus": "~2.6.0",
+		"gulp-uglify": "~2.0.0",
+		"gulp-watch": "^4.3.10",
+		"jquery": "^3.1.1",
+		"vinyl-buffer": "^1.0.0",
+		"vinyl-source-stream": "^1.1.0"
+	}
 }
